--- a/resources/sass/elements.scss
+++ b/resources/sass/elements.scss
@@ -150,7 +150,7 @@ input {
   }
 
   &[type=button] {
-    font-family: 'monospace';
+    font-family: "Deja Vu Sans Mono";
     background-color: $primary-background-color;
     color: white;
     border: none;
