--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,6 +14,10 @@ html, body {
   overflow: hidden;
 }
 
+input {
+  font-family: "Deja Vu Sans Mono";
+}
+
 body {
   background: $background-color;
 }
