Bufixed "destroy when opened feature"; Changed volume .:/app to applicaiton:/app

--- a/templates/pastitude.html
+++ b/templates/pastitude.html
@@ -58,7 +58,7 @@
                         </li>
                         </li>
                         <li style="float:right">
-                            <input type="button" value="Light theme (in progress...)">
+{#                            <input type="button" value="Light theme (in progress...)">#}
                             <input type="button" id="switch-vim-mode" value="Vim mode">
                             <input type="button" id="save" value="Save">
                         </li>
