--- a/resources/sass/dark.scss
+++ b/resources/sass/dark.scss
@@ -5,6 +5,7 @@ $primary-color: #26A6A6;
 $primary-placeholder-color: #34444D;
 $primary-hover-color: #3E505A;
 $primary-focus-color: #4A606C;
+$primary-focus-color-transparent: rgba(0, 255, 0, 0.25);
 $primary-background-color: #2E3C43;
 
 $secondary-text-color: #4E6D71;
