--- a/resources/sass/codemirror-default.scss
+++ b/resources/sass/codemirror-default.scss
@@ -1,3 +1,5 @@
+@import "dark";
+
 /* BASICS */
 
 .CodeMirror {
@@ -325,8 +327,8 @@ div.CodeMirror-dragcursors {
 .CodeMirror-line::-moz-selection, .CodeMirror-line > span::-moz-selection, .CodeMirror-line > span > span::-moz-selection { background: #d7d4f0; }
 
 .cm-searching {
-  background-color: #ffa;
-  background-color: rgba(255, 255, 0, .4);
+  background-color: $primary-hover-color;
+  background-color: $primary-focus-color-transparent;
 }
 
 /* Used to force a border model for a node */
